fix: modal is not scrollable on small height screen

--- a/src/index.css
+++ b/src/index.css
@@ -36,4 +36,5 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow: scroll;
 }
