--- a/src/pages/Products/Products.module.css
+++ b/src/pages/Products/Products.module.css
@@ -36,28 +36,21 @@
 }
 
 .reactModalContent {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  left: 0;
-  right: 0;
   width: 46.875rem;
   max-width: 100%;
   height: auto;
-  margin: 0 auto;
+  margin: 3rem;
   background: #ffffff;
-  border: none;
   border-radius: 0;
   outline: none;
   padding: 1.5rem;
-  overflow: auto;
 }
 
 @media (max-width: 48em) {
   .reactModalContent {
-    top: 0;
-    bottom: 0;
-    transform: none;
+    margin: 0;
+    min-height: 100%;
+    min-width: 100%;
   }
 }
 
@@ -69,6 +62,10 @@
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 999;
+  overflow: auto;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
 }
 
 .modalContentHelper {
